// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Icon Defaults play-test 1`] = `
<div data-test-block="true">
  <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10"
       viewbox="0 0 24 24"
       focusable="false"
       aria-hidden="true"
       role="img"
  >
    <path d="M12.5 11a2 2 0 1 0-.09 3.998A2 2 0 0 0 12.5 11Zm0-2c1.63 0 3.12.35 4.5 1.05 1.34.71 2 1.56 2 2.56v5.77c0 1.12-.86 2.06-2.61 2.81V19c0-.95-.86-1.62-2.58-2.03-.56-.13-1-.19-1.31-.19-.87 0-1.7.17-2.46.52-.77.34-1.23.78-1.38 1.31 1.34.53 2.62.8 3.84.8l1-.1v2.63l-1 .06a9.68 9.68 0 0 1-3.89-.81C6.86 20.44 6 19.5 6 18.38v-5.77c0-1 .66-1.85 2-2.56C9.38 9.35 10.88 9 12.5 9Zm0-7a3 3 0 1 1 0 6 3 3 0 0 1 0-6Z">
    </path>
  </svg>
</div>
`;

exports[`Tester/Icon SystemIconSizeExtraLarge play-test 1`] = `
<div data-test-block="true">
  <svg class="_systemIcon_dry7n_2 _systemIcon_extraLarge_dry7n_20"
       viewbox="0 0 24 24"
       focusable="false"
       aria-hidden="true"
       role="img"
  >
    <path d="M12.5 11a2 2 0 1 0-.09 3.998A2 2 0 0 0 12.5 11Zm0-2c1.63 0 3.12.35 4.5 1.05 1.34.71 2 1.56 2 2.56v5.77c0 1.12-.86 2.06-2.61 2.81V19c0-.95-.86-1.62-2.58-2.03-.56-.13-1-.19-1.31-.19-.87 0-1.7.17-2.46.52-.77.34-1.23.78-1.38 1.31 1.34.53 2.62.8 3.84.8l1-.1v2.63l-1 .06a9.68 9.68 0 0 1-3.89-.81C6.86 20.44 6 19.5 6 18.38v-5.77c0-1 .66-1.85 2-2.56C9.38 9.35 10.88 9 12.5 9Zm0-7a3 3 0 1 1 0 6 3 3 0 0 1 0-6Z">
    </path>
  </svg>
</div>
`;

exports[`Tester/Icon SystemIconSizeLarge play-test 1`] = `
<div data-test-block="true">
  <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15"
       viewbox="0 0 24 24"
       focusable="false"
       aria-hidden="true"
       role="img"
  >
    <path d="M12.5 11a2 2 0 1 0-.09 3.998A2 2 0 0 0 12.5 11Zm0-2c1.63 0 3.12.35 4.5 1.05 1.34.71 2 1.56 2 2.56v5.77c0 1.12-.86 2.06-2.61 2.81V19c0-.95-.86-1.62-2.58-2.03-.56-.13-1-.19-1.31-.19-.87 0-1.7.17-2.46.52-.77.34-1.23.78-1.38 1.31 1.34.53 2.62.8 3.84.8l1-.1v2.63l-1 .06a9.68 9.68 0 0 1-3.89-.81C6.86 20.44 6 19.5 6 18.38v-5.77c0-1 .66-1.85 2-2.56C9.38 9.35 10.88 9 12.5 9Zm0-7a3 3 0 1 1 0 6 3 3 0 0 1 0-6Z">
    </path>
  </svg>
</div>
`;

exports[`Tester/Icon SystemIconSizeMedium play-test 1`] = `
<div data-test-block="true">
  <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10"
       viewbox="0 0 24 24"
       focusable="false"
       aria-hidden="true"
       role="img"
  >
    <path d="M12.5 11a2 2 0 1 0-.09 3.998A2 2 0 0 0 12.5 11Zm0-2c1.63 0 3.12.35 4.5 1.05 1.34.71 2 1.56 2 2.56v5.77c0 1.12-.86 2.06-2.61 2.81V19c0-.95-.86-1.62-2.58-2.03-.56-.13-1-.19-1.31-.19-.87 0-1.7.17-2.46.52-.77.34-1.23.78-1.38 1.31 1.34.53 2.62.8 3.84.8l1-.1v2.63l-1 .06a9.68 9.68 0 0 1-3.89-.81C6.86 20.44 6 19.5 6 18.38v-5.77c0-1 .66-1.85 2-2.56C9.38 9.35 10.88 9 12.5 9Zm0-7a3 3 0 1 1 0 6 3 3 0 0 1 0-6Z">
    </path>
  </svg>
</div>
`;

exports[`Tester/Icon SystemIconSizeSmall play-test 1`] = `
<div data-test-block="true">
  <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5"
       viewbox="0 0 24 24"
       focusable="false"
       aria-hidden="true"
       role="img"
  >
    <path d="M12.5 11a2 2 0 1 0-.09 3.998A2 2 0 0 0 12.5 11Zm0-2c1.63 0 3.12.35 4.5 1.05 1.34.71 2 1.56 2 2.56v5.77c0 1.12-.86 2.06-2.61 2.81V19c0-.95-.86-1.62-2.58-2.03-.56-.13-1-.19-1.31-.19-.87 0-1.7.17-2.46.52-.77.34-1.23.78-1.38 1.31 1.34.53 2.62.8 3.84.8l1-.1v2.63l-1 .06a9.68 9.68 0 0 1-3.89-.81C6.86 20.44 6 19.5 6 18.38v-5.77c0-1 .66-1.85 2-2.56C9.38 9.35 10.88 9 12.5 9Zm0-7a3 3 0 1 1 0 6 3 3 0 0 1 0-6Z">
    </path>
  </svg>
</div>
`;

exports[`Tester/Icon ThemeIconSizeLarge play-test 1`] = `
<div data-test-block="true">
  <svg class="_themeIcon_dry7n_26 _themeIcon_large_dry7n_38"
       viewbox="0 0 48 48"
       focusable="false"
       aria-hidden="true"
       role="img"
  >
    <path d="M34.519 8.316c.908 0 1.62.75 1.62 1.66V35.93a1.67 1.67 0 0 1-1.66 1.66h-.79v.79c0 .868-.672 1.58-1.501 1.58h-18.41c-.83 0-1.501-.712-1.501-1.58V12.266c0-.87.671-1.58 1.5-1.58h1.186v-.712c0-.908.75-1.659 1.66-1.659l17.896.001Zm-11.062 4.82h-8.692v24.296H31.24V21.274h-7.783v-8.138ZM19.862 25.5v3.042H16.82V25.5h3.042Zm4.661 0v3.042h-3.042V25.5h3.042Zm4.662 0v3.042h-3.042V25.5h3.042Zm-3.279-11.536v4.86h4.267l-4.267-4.86Z">
    </path>
  </svg>
</div>
`;

exports[`Tester/Icon ThemeIconSizeMedium play-test 1`] = `
<div data-test-block="true">
  <svg class="_themeIcon_dry7n_26 _themeIcon_medium_dry7n_33"
       viewbox="0 0 48 48"
       focusable="false"
       aria-hidden="true"
       role="img"
  >
    <path d="M34.519 8.316c.908 0 1.62.75 1.62 1.66V35.93a1.67 1.67 0 0 1-1.66 1.66h-.79v.79c0 .868-.672 1.58-1.501 1.58h-18.41c-.83 0-1.501-.712-1.501-1.58V12.266c0-.87.671-1.58 1.5-1.58h1.186v-.712c0-.908.75-1.659 1.66-1.659l17.896.001Zm-11.062 4.82h-8.692v24.296H31.24V21.274h-7.783v-8.138ZM19.862 25.5v3.042H16.82V25.5h3.042Zm4.661 0v3.042h-3.042V25.5h3.042Zm4.662 0v3.042h-3.042V25.5h3.042Zm-3.279-11.536v4.86h4.267l-4.267-4.86Z">
    </path>
  </svg>
</div>
`;

exports[`Tester/Icon WithAriaLabel play-test 1`] = `
<div data-test-block="true">
  <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10"
       viewbox="0 0 24 24"
       focusable="false"
       aria-label="min custom aria-label beskrivelse"
       aria-hidden="false"
       role="img"
  >
    <path d="M12.5 11a2 2 0 1 0-.09 3.998A2 2 0 0 0 12.5 11Zm0-2c1.63 0 3.12.35 4.5 1.05 1.34.71 2 1.56 2 2.56v5.77c0 1.12-.86 2.06-2.61 2.81V19c0-.95-.86-1.62-2.58-2.03-.56-.13-1-.19-1.31-.19-.87 0-1.7.17-2.46.52-.77.34-1.23.78-1.38 1.31 1.34.53 2.62.8 3.84.8l1-.1v2.63l-1 .06a9.68 9.68 0 0 1-3.89-.81C6.86 20.44 6 19.5 6 18.38v-5.77c0-1 .66-1.85 2-2.56C9.38 9.35 10.88 9 12.5 9Zm0-7a3 3 0 1 1 0 6 3 3 0 0 1 0-6Z">
    </path>
  </svg>
</div>
`;

exports[`Tester/Icon WithAttributes play-test 1`] = `
<div data-test-block="true">
  <svg id="htmlid"
       class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 dummyClassname"
       lang="nb"
       data-testid="123ID"
       viewbox="0 0 24 24"
       focusable="false"
       aria-hidden="true"
       role="img"
  >
    <path d="M12.5 11a2 2 0 1 0-.09 3.998A2 2 0 0 0 12.5 11Zm0-2c1.63 0 3.12.35 4.5 1.05 1.34.71 2 1.56 2 2.56v5.77c0 1.12-.86 2.06-2.61 2.81V19c0-.95-.86-1.62-2.58-2.03-.56-.13-1-.19-1.31-.19-.87 0-1.7.17-2.46.52-.77.34-1.23.78-1.38 1.31 1.34.53 2.62.8 3.84.8l1-.1v2.63l-1 .06a9.68 9.68 0 0 1-3.89-.81C6.86 20.44 6 19.5 6 18.38v-5.77c0-1 .66-1.85 2-2.56C9.38 9.35 10.88 9 12.5 9Zm0-7a3 3 0 1 1 0 6 3 3 0 0 1 0-6Z">
    </path>
  </svg>
</div>
`;

exports[`Tester/Icon WithCustomSVG smoke-test 1`] = `
<div data-test-block="true">
  <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10"
       viewbox="0 0 24 24"
       focusable="false"
       aria-hidden="true"
       role="img"
  >
    <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2Z">
    </path>
  </svg>
</div>
`;

exports[`Tester/Icon WithRef play-test 1`] = `
<div data-test-block="true">
  <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10"
       viewbox="0 0 24 24"
       focusable="false"
       aria-hidden="true"
       role="img"
       id="dummyIdForwardedFromRef"
  >
    <path d="M12.5 11a2 2 0 1 0-.09 3.998A2 2 0 0 0 12.5 11Zm0-2c1.63 0 3.12.35 4.5 1.05 1.34.71 2 1.56 2 2.56v5.77c0 1.12-.86 2.06-2.61 2.81V19c0-.95-.86-1.62-2.58-2.03-.56-.13-1-.19-1.31-.19-.87 0-1.7.17-2.46.52-.77.34-1.23.78-1.38 1.31 1.34.53 2.62.8 3.84.8l1-.1v2.63l-1 .06a9.68 9.68 0 0 1-3.89-.81C6.86 20.44 6 19.5 6 18.38v-5.77c0-1 .66-1.85 2-2.56C9.38 9.35 10.88 9 12.5 9Zm0-7a3 3 0 1 1 0 6 3 3 0 0 1 0-6Z">
    </path>
  </svg>
</div>
`;

exports[`Tester/Icon WithTitle play-test 1`] = `
<div data-test-block="true">
  <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10"
       viewbox="0 0 24 24"
       focusable="false"
       aria-labelledby="svgtitle-:r5:"
       aria-hidden="false"
       role="img"
  >
    <title id="svgtitle-:r5:">
      Min custom title beskrivelse
    </title>
    <path d="M12.5 11a2 2 0 1 0-.09 3.998A2 2 0 0 0 12.5 11Zm0-2c1.63 0 3.12.35 4.5 1.05 1.34.71 2 1.56 2 2.56v5.77c0 1.12-.86 2.06-2.61 2.81V19c0-.95-.86-1.62-2.58-2.03-.56-.13-1-.19-1.31-.19-.87 0-1.7.17-2.46.52-.77.34-1.23.78-1.38 1.31 1.34.53 2.62.8 3.84.8l1-.1v2.63l-1 .06a9.68 9.68 0 0 1-3.89-.81C6.86 20.44 6 19.5 6 18.38v-5.77c0-1 .66-1.85 2-2.56C9.38 9.35 10.88 9 12.5 9Zm0-7a3 3 0 1 1 0 6 3 3 0 0 1 0-6Z">
    </path>
  </svg>
</div>
`;

exports[`Tester/Icon WithVariant play-test 1`] = `
<div data-test-block="true">
  <svg class="_themeIcon_dry7n_26 _themeIcon_medium_dry7n_33"
       viewbox="0 0 48 48"
       focusable="false"
       aria-hidden="true"
       role="img"
  >
    <path d="M34.519 8.316c.908 0 1.62.75 1.62 1.66V35.93a1.67 1.67 0 0 1-1.66 1.66h-.79v.79c0 .868-.672 1.58-1.501 1.58h-18.41c-.83 0-1.501-.712-1.501-1.58V12.266c0-.87.671-1.58 1.5-1.58h1.186v-.712c0-.908.75-1.659 1.66-1.659l17.896.001Zm-11.062 4.82h-8.692v24.296H31.24V21.274h-7.783v-8.138ZM19.862 25.5v3.042H16.82V25.5h3.042Zm4.661 0v3.042h-3.042V25.5h3.042Zm4.662 0v3.042h-3.042V25.5h3.042Zm-3.279-11.536v4.86h4.267l-4.267-4.86Z">
    </path>
  </svg>
</div>
`;
